# AsLive

./: .gitignore  CAMERA_VISIBILITY_CHANGE.md  CHANGELOG.md  DELIVERY_CHECKLIST.md  Dockerfile  FRONTEND_MONITOR_FIX.md  IMPLEMENTATION_SUMMARY.md  MONITOR_AGENT_INTEGRATION.md  MONITOR_AGENT_README.md  MONITOR_AGENT_SUMMARY.md  MONITOR_FINAL_STATUS.md  MONITOR_IMPLEMENTATION_COMPLETE.md  MONITOR_INTEGRATION_GUIDE.md  MONITOR_QUICK_START.md  ORGANOID_GUIDE.md  ORGANOID_SSE_UPDATE.md  QUICK_START.md  README.md  README_MONITOR.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  TOOL_ACTION_CHANGES.md  TOOL_ACTION_INTEGRATION.md  TOOL_ACTION_SOLUTION_SUMMARY.md  TOOL_ACTION_SSE_FIX.md  TOOL_ACTION_TESTING_GUIDE.md  api_server.py  config.py  docker-compose.yaml  pyproject.toml  realtime_pipeline.py  requirements.txt  test_intent_classification.py  test_monitor_agent.py  test_monitor_integration.py  test_organoid_offsets.py  test_organoid_sse.py  verify-monitor-integration.sh
core/: asr.py  llm.py  tts.py
core/agents/: __init__.py  ai_native_agent.py  base_agent.py  monitor_agent.py  monitor_state.py  monitor_tools.py  organoid_agent.py
docs/: Monitor_Agent设计方案.md  接入Labillion-AI-Native.md  接入类器官Agent.md
static/: app.js  index.html  monitor-3d.js  monitor-config.js  monitor-control.js  monitor-examples.js  monitor.js  style.css
